--- a/style.css
+++ b/style.css
@@ -63,6 +63,16 @@ body{
     background:#724ae8;
     padding: 16px 0;
     text-align: center;
+    position:relative;
+}
+.chtbot header span{
+    position: absolute;
+    right: 20px;
+    top:50%;
+    color: white;
+    cursor: pointer;
+    display: none;
+    transform: translateY(-50%);
 }
 .chatbot header h2 {
     color: aliceblue;
@@ -135,7 +145,34 @@ body{
 .chat-input textarea:valid~span{
     visibility: visible;
 }
+@media(max-width:880px){
+    .chatbot{
+        right: 100px;
+        bottom:100px ;
+        width: 80%;
+        height: 100%;
+        border-radius: 20px;
+    }
+    .chatbot .chatbox{
+        height: 90%;
+    }
+}
 
+@media(max-width:490px){
+    .chatbot{
+        right: 0;
+        bottom: 0;
+        width: 100%;
+        height: 100%;
+        border-radius: 0;
+    }
+    .chatbot .chatbox{
+        height: 90%;
+    }
+    .chtbot header span{
+        display: block;
+    }
+}
 
 
 
